[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/ships/craft_speederD.glb" type="PackedScene" id=1]
[ext_resource path="res://src/ship/AbstractShip.gd" type="Script" id=2]
[ext_resource path="res://assets/particules/sphere.png" type="Texture" id=3]
[ext_resource path="res://src/ship/particules/Truster.gd" type="Script" id=4]
[ext_resource path="res://src/ship/particules/TrusterGroup.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="CapsuleShape" id=2]
radius = 1.52439
height = 0.002

[sub_resource type="CapsuleMesh" id=3]
radius = 1.52
mid_height = 0.001
rings = 20

[sub_resource type="VisualShaderNodeFresnel" id=11]
default_input_values = [ 2, false, 3, 5.0 ]

[sub_resource type="VisualShaderNodeColorConstant" id=12]
constant = Color( 0.753052, 0.786754, 0.96875, 1 )

[sub_resource type="VisualShaderNodeScalarInterp" id=6]

[sub_resource type="VisualShaderNodeScalarUniform" id=7]
uniform_name = "shield_strength"

[sub_resource type="VisualShaderNodeVectorInterp" id=8]

[sub_resource type="VisualShaderNodeColorConstant" id=9]
constant = Color( 0.976563, 0.423431, 0.423431, 1 )

[sub_resource type="VisualShader" id=10]
code = "shader_type spatial;
render_mode specular_schlick_ggx, unshaded;

uniform float shield_strength;



void vertex() {
// Output:0

}

void fragment() {
// Color:7
	vec3 n_out7p0 = vec3(0.976563, 0.423431, 0.423431);
	float n_out7p1 = 1.000000;

// Color:3
	vec3 n_out3p0 = vec3(0.753052, 0.786754, 0.968750);
	float n_out3p1 = 1.000000;

// ScalarUniform:5
	float n_out5p0 = shield_strength;

// VectorMix:6
	vec3 n_out6p0 = mix(n_out7p0, n_out3p0, vec3(n_out5p0));

// Fresnel:2
	float n_in2p3 = 5.00000;
	float n_out2p0 = pow(1.0 - clamp(dot(NORMAL, VIEW), 0.0, 1.0), n_in2p3);

// ScalarMix:4
	float n_in4p0 = 0.00000;
	float n_out4p0 = mix(n_in4p0, n_out2p0, n_out5p0);

// Output:0
	ALBEDO = n_out6p0;
	ALPHA = n_out4p0;
	EMISSION = n_out6p0;

}

void light() {
// Output:0

}
"
flags/unshaded = true
nodes/fragment/0/position = Vector2( 360, 160 )
nodes/fragment/2/node = SubResource( 11 )
nodes/fragment/2/position = Vector2( -620, 60 )
nodes/fragment/3/node = SubResource( 12 )
nodes/fragment/3/position = Vector2( -260, 400 )
nodes/fragment/4/node = SubResource( 6 )
nodes/fragment/4/position = Vector2( -96.0127, 133.975 )
nodes/fragment/5/node = SubResource( 7 )
nodes/fragment/5/position = Vector2( -580, 200 )
nodes/fragment/6/node = SubResource( 8 )
nodes/fragment/6/position = Vector2( -92, 303 )
nodes/fragment/7/node = SubResource( 9 )
nodes/fragment/7/position = Vector2( -400, 340 )
nodes/fragment/connections = PoolIntArray( 2, 0, 4, 1, 5, 0, 4, 2, 4, 0, 0, 1, 5, 0, 6, 2, 6, 0, 0, 0, 6, 0, 0, 5, 3, 0, 6, 1, 7, 0, 6, 0 )

[sub_resource type="ShaderMaterial" id=21]
resource_local_to_scene = true
shader = SubResource( 10 )
shader_param/shield_strength = 1.0

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.278431, 0.278431, 0.278431, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=13]

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 1 ), 0.0, 3.70002, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0.00813008, 0.105691, 0.605691, 1 )
colors = PoolColorArray( 0.470588, 0.239216, 0.0431373, 0, 0.31, 0.172773, 0.0527, 1, 0.972549, 0.972549, 0.972549, 0, 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.278431, 0.278431, 0.278431, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0.00813008, 0.369919, 0.617886, 1 )
colors = PoolColorArray( 0.470588, 0.239216, 0.0431373, 0, 0.779297, 0.451343, 0.164383, 1, 0.537109, 0.450021, 0.371361, 1, 1, 1, 1, 0 )

[sub_resource type="SpatialMaterial" id=18]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0.00813008, 0.0284553, 0.605691, 1 )
colors = PoolColorArray( 0, 0.423529, 0.443137, 0, 0, 0.423529, 0.443137, 1, 0.972549, 0.972549, 0.972549, 0, 1, 1, 1, 0.0588235 )

[sub_resource type="Animation" id=20]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Destruction:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotated_nodes/ship:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape/Shield:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flame:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Ship" type="RigidBody"]
physics_material_override = SubResource( 1 )
contacts_reported = 10
contact_monitor = true
can_sleep = false
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.352364, 0.133905 )
shape = SubResource( 2 )

[node name="Shield" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 21 )

[node name="Flame" type="CPUParticles" parent="."]
transform = Transform( -0.766045, -0.492404, 0.413176, 0, 0.642788, 0.766045, -0.642788, 0.586824, -0.492404, 0, 0, 0 )
material_override = SubResource( 22 )
emitting = false
amount = 100
lifetime = 3.0
local_coords = false
mesh = SubResource( 13 )
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3( 0, 0, 0.1 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
scale_amount_curve = SubResource( 14 )
color_ramp = SubResource( 15 )

[node name="Destruction" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.440133, 0 )
material_override = SubResource( 16 )
emitting = false
amount = 100
lifetime = 0.4
one_shot = true
mesh = SubResource( 13 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 0, 0.1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
linear_accel = 5.0
linear_accel_random = 1.0
scale_amount = 6.0
color_ramp = SubResource( 17 )

[node name="rotated_nodes" type="Spatial" parent="."]

[node name="ship" parent="rotated_nodes" instance=ExtResource( 1 )]

[node name="back_truster" type="Spatial" parent="rotated_nodes"]
script = ExtResource( 5 )
truster_strength = 0.0
max_truster_strength = 7.0

[node name="Truster" type="CPUParticles" parent="rotated_nodes/back_truster"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.403814, 0.411061, 1.03856 )
material_override = SubResource( 18 )
emitting = false
amount = 200
lifetime = 0.5
local_coords = false
mesh = SubResource( 13 )
direction = Vector3( 0, 0, 0.1 )
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
scale_amount = 0.4
scale_amount_curve = SubResource( 14 )
color_ramp = SubResource( 19 )
script = ExtResource( 4 )
truster_strength = 0.0

[node name="Truster2" type="CPUParticles" parent="rotated_nodes/back_truster"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.404, 0.411, 1.03811 )
material_override = SubResource( 18 )
emitting = false
amount = 200
lifetime = 0.35
local_coords = false
mesh = SubResource( 13 )
direction = Vector3( 0, 0, 0.1 )
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
scale_amount = 0.4
scale_amount_curve = SubResource( 14 )
color_ramp = SubResource( 19 )
script = ExtResource( 4 )
truster_strength = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 20 )

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
